--- a/app/templates/profiles/friend_profile_fixed.html
+++ b/app/templates/profiles/friend_profile_fixed.html
@@ -155,7 +155,7 @@
                 <div class='intols'>
                     <div id='intols' style="padding-top: 1em">
                         {% if friend_profile.intolerances %}
-                            <strong>Allergies/intolerances:</strong>
+                            <strong>Common Allergies/intolerances:</strong>
                             <ul>
                                 {% for intolerance in friend_profile.intolerances|sort(attribute='intol_name') %}
                                     <li>
