--- a/app/templates/spoonacular/recipe_search.html
+++ b/app/templates/spoonacular/recipe_search.html
@@ -51,7 +51,7 @@
                             <input type="checkbox" class="alertme" name="diets" value="{{  diet }}" checked><strong>{{  diet|capitalize  }}</strong></label><br>
                             
                             {% for guest in party.guests %}
-                                <a title='Diet Reason: "{{  guest.profiles.diet_reason if guest.profiles.diet_reason != None else 'None'  }}"' class="ooltip">
+                                <a title='Diet Reason: "{{  guest.profiles.diet_reason if guest.profiles.diet_reason != None else 'No reason given'  }}"' class="ooltip">
                                 {% if guest.profiles.diet.diet_type == diet %}
                                     {% if guest.profiles.private_profile_title %}
                                         {{ guest.profiles.private_profile_title }}<br>
@@ -67,13 +67,13 @@
                             {% endfor %}
                     </div>
                 {% endfor %}
-                    <h4 class="form-control-static">Intolerances/Allergies:</h4>
+                    <h4 class="form-control-static">Common Intolerances/Allergies:</h4>
                     
                     {% if party_intols %}
                         <div class="checkbox">
                             {% for intol in party_intols %}
                                 {% if not intol %}
-                                    <span class="text-muted" style="padding-left: 1em">No allergies/intolerances</span>
+                                    <span class="text-muted" style="padding-left: 1em">No common allergies/intolerances</span>
                                 {% endif %}                 
                             <label>
                                 {% if intol %}
@@ -82,7 +82,7 @@
                                    {% for guest in party.guests %}
                                         {% for intolerance in guest.profiles.intolerances %}
                                             {% if intolerance.intol_name == intol %}
-                                                <a title="No reasons are collected for Intolerances/Allergies because the reason is always the same, these things will make your guest very sick. Tread carefully. It may be enough to have seperate dishes and it may not." class="ooltip">
+                                                <a title="The consquences of your guest ingesting something they are allergic to or intolerant of will vary in severity, but should always be avoided." class="ooltip">
                                                 {% if guest.profiles.private_profile_title %}
                                                     {{ guest.profiles.private_profile_title  }}
                                                 {% else %}
@@ -118,7 +118,7 @@
                                                     {% for guest in party.guests %}
                                                         {% for guestavoid in guest.profiles.avoidances %}
                                                             {% if guestavoid.ingredient == avoid %}
-                                                                <a title='Avoid Reason: "{{  guestavoid.reason  }}"' class="ooltip">
+                                                                <a title='Avoid Reason: {{ guestavoid.reason if guestavoid.reason != None else "No reason given" }}' class="ooltip">
                                                                     {% if guest.profiles.private_profile_title %}
                                                                         {{ guest.profiles.private_profile_title  }}
                                                                     {% elif guest.profiles.first_name and guest.profiles.last_name %}
@@ -137,10 +137,11 @@
                                                 {% endif %}
                                             </label><br>
                                     {% endfor %}
-                                </div>
+                                
                                 {% else %}
                                 <span class="text-muted">No ingredients to avoid</span><br><br>
                                 {% endif %}
+                                </div>
                         <input type="submit" id="recipe-form-submit"value="Click for more variety" class="btn btn-success btn-lg btn-block">                 
                         
                     </form>
